--- a/branches/0.3.5/doublecmd.ini
+++ b/branches/0.3.5/doublecmd.ini
@@ -70,9 +70,9 @@ Plugin1Path=%commander_path%/plugins/wdx/rpm_wdx/rpm_wdx.wdx
 
 [ColumnsSet]
 ColumnsSetCount=2
-ColumnsSet1Name=Brief
-ColumnsSet2Name=Full
-#if ColumnsSetXName does not exist the default columns set will be loaded
+ColumnsSet1Name=Default
+ColumnsSet2Name=Brief
+
 
 [Brief]
 ColumnCount=4
