--- a/branches/0.3.5/doublecmd.ini
+++ b/branches/0.3.5/doublecmd.ini
@@ -58,9 +58,15 @@ ColorFilter4Attributes=-*x*
 ColorFilter4Name=Executables
 
 [PackerPlugins]
-zip=87,/home/alexx/doublecmd/plugins/zip/libZip.so
-tar=87,/home/alexx/doublecmd/plugins/zip/libZip.so
-gz=87,/home/alexx/doublecmd/plugins/zip/libZip.so
+cpio=0,%commander_path%\plugins\wcx\cpio\cpio.wcx
+deb=4,%commander_path%\plugins\wcx\deb\deb.wcx
+rpm=20,%commander_path%\plugins\wcx\rpm\rpm.wcx
+bz2=0,%commander_path%\plugins\wcx\unbz2\unbz2.wcx
+rar=0,%commander_path%\plugins\wcx\unrar\unrar.wcx
+zip=15,%commander_path%\plugins\wcx\zip\zip.wcx
+tar=15,%commander_path%\plugins\wcx\zip\zip.wcx
+gz=15,%commander_path%\plugins\wcx\zip\zip.wcx
+tgz=15,%commander_path%\plugins\wcx\zip\zip.wcx
 
 [Content Plugins]
 PluginCount=1
