--- a/branches/0.4.5/plugins/wcx/zip/src/Zip.lpi
+++ b/branches/0.4.5/plugins/wcx/zip/src/Zip.lpi
@@ -60,6 +60,7 @@
         <CustomConfigFile Value="True"/>
         <ConfigFilePath Value="fpc-extra.cfg"/>
       </ConfigFile>
+      <CustomOptions Value="-fPIC"/>
       <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
