UPD: Several updates/fixes to the zip plugin.
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@1827 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/plugins/wcx/zip/src/Zip.lpi
+++ b/branches/0.4.5/plugins/wcx/zip/src/Zip.lpi
@@ -20,7 +20,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
+        <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
     <Units Count="1">
@@ -35,11 +35,9 @@
     <SearchPaths>
       <OtherUnitFiles Value="../fparchive/;../../../../sdk/"/>
       <UnitOutputDirectory Value="../lib"/>
-      <SrcPath Value="$(FPCSrcDir)/rtl/objpas/"/>
     </SearchPaths>
     <Parsing>
       <SyntaxOptions>
-        <SyntaxMode Value="Delphi"/>
         <UseAnsiStrings Value="True"/>
       </SyntaxOptions>
     </Parsing>
@@ -47,10 +45,10 @@
       <SmartLinkUnit Value="True"/>
     </CodeGeneration>
     <Linking>
-      <LinkSmart Value="True"/>
       <Debugging>
         <GenerateDebugInfo Value="True"/>
       </Debugging>
+      <LinkSmart Value="True"/>
       <Options>
         <ExecutableType Value="Library"/>
       </Options>
