--- a/branches/0.4.5/src/doublecmd.lpi
+++ b/branches/0.4.5/src/doublecmd.lpi
@@ -442,6 +442,7 @@
     <Linking>
       <Debugging>
         <GenerateDebugInfo Value="True"/>
+        <StripSymbols Value="True"/>
       </Debugging>
     </Linking>
     <Other>
