UPD: Prepare to 0.4.5 release
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@2157 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/doublecmd.ini
+++ b/branches/0.4.5/doublecmd.ini
@@ -1,5 +1,6 @@
 [Configuration]
 UseIniInProgramDir=0
+LuaLib=lua5.1.dll
 
 [Colors]
 ForeColor=0
@@ -67,14 +68,3 @@ Column4Title=Date
 Column4FuncsString=[DC().GETFILETIME{}]
 Column4Width=70
 Column4Align=1
-
-[lefttabs]
-activetab=0
-activecaption=doublecmd
-
-[righttabs]
-activetab=0
-activecaption=mnt
-0_path=/mnt/
-0_caption=mnt
-0_columnsset=Brief
