FIX: Compiling plugins under Linux 32 bit
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@2158 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/plugins/wcx/lzma/src/lzma.lpi
+++ b/branches/0.4.5/plugins/wcx/lzma/src/lzma.lpi
@@ -46,7 +46,10 @@
       </Options>
     </Linking>
     <Other>
-      <CustomOptions Value="-fPIC"/>
+      <ConfigFile>
+        <CustomConfigFile Value="True"/>
+        <ConfigFilePath Value="fpc-extra.cfg"/>
+      </ConfigFile>    
       <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
