ADD: Cross compiling support (Linux32 -> Linux64) to build scripts
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@2168 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/src/doublecmd.lpi
+++ b/branches/0.4.5/src/doublecmd.lpi
@@ -446,6 +446,10 @@
       </Debugging>
     </Linking>
     <Other>
+      <ConfigFile>
+        <CustomConfigFile Value="True"/>
+        <ConfigFilePath Value="fpc-extra.cfg"/>
+      </ConfigFile>
       <CompilerPath Value="$(CompPath)"/>
       <ExecuteBefore>
         <Command Value="_getsvnrev.cmd $(LazarusDir)"/>
