--- a/branches/0.4.5/plugins/wlx/WlxMplayer/src/wlxMplayer.lpi
+++ b/branches/0.4.5/plugins/wlx/WlxMplayer/src/wlxMplayer.lpi
@@ -68,6 +68,10 @@
       </Options>
     </Linking>
     <Other>
+      <ConfigFile>
+        <CustomConfigFile Value="True"/>
+        <ConfigFilePath Value="fpc-extra.cfg"/>
+      </ConfigFile>
       <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
