git-svn-id: http://svn.code.sf.net/p/doublecmd/code@2182 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/src/doublecmd.lpi
+++ b/branches/0.4.5/src/doublecmd.lpi
@@ -441,8 +441,8 @@
     </CodeGeneration>
     <Linking>
       <Debugging>
-        <GenerateDebugInfo Value="True"/>
         <StripSymbols Value="True"/>
+        <UseExternalDbgSyms Value="True"/>
       </Debugging>
     </Linking>
     <Other>
