UPD: Increase version number to 0.4.5.1
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@2266 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/src/doublecmd.lpi
+++ b/branches/0.4.5/src/doublecmd.lpi
@@ -23,10 +23,11 @@
       <UseVersionInfo Value="True"/>
       <CurrentMajorRevNr Value="4"/>
       <CurrentMinorRevNr Value="5"/>
-      <ProjectVersion Value="0.4.5.0"/>
+      <CurrentBuildNr Value="1"/>
+      <ProjectVersion Value="0.4.5.1"/>
       <FileDescription Value="Double Commander is a cross platform open source file manager with two panels side by side"/>
       <InternalName Value="DOUBLECMD"/>
-      <LegalCopyright Value="Copyright (C) 2006-2009  Koblov Alexander"/>
+      <LegalCopyright Value="Copyright (C) 2006-2010  Koblov Alexander"/>
       <ProductName Value="Double Commander"/>
     </VersionInfo>
     <PublishOptions>
@@ -254,6 +255,7 @@
         <IsPartOfProject Value="True"/>
         <ComponentName Value="frmFileProperties"/>
         <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
         <UnitName Value="fFileProperties"/>
       </Unit26>
       <Unit27>
