--- a/branches/0.4.5/plugins/wcx/unrar/src/unrar.lpi
+++ b/branches/0.4.5/plugins/wcx/unrar/src/unrar.lpi
@@ -58,7 +58,10 @@
       </Options>
     </Linking>
     <Other>
-      <CustomOptions Value="-fPIC"/>
+      <ConfigFile>
+        <CustomConfigFile Value="True"/>
+        <ConfigFilePath Value="fpc-extra.cfg"/>
+      </ConfigFile>
       <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
