UPD: Merge changes/fixes from trunk (r3791-3817)
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@3818 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.5/src/doublecmd.lpi
+++ b/branches/0.5/src/doublecmd.lpi
@@ -34,7 +34,7 @@
             <Filename Value="..\doublecmd"/>
           </Target>
           <SearchPaths>
-            <IncludeFiles Value="$(LazarusDir)\ide;$(ProjOutDir)"/>
+            <IncludeFiles Value="$(LazarusDir)\ide;$(ProjOutDir);..\sdk"/>
             <Libraries Value="$(ProjPath)\..\libraries\$(TargetCPU)-$(TargetOS)"/>
             <OtherUnitFiles Value="platform;platform\$(SrcOS);..\sdk;newdesign;newdesign\fileproperties;frames"/>
             <UnitOutputDirectory Value="..\units\$(TargetCPU)-$(TargetOS)-$(LCLWidgetType)"/>
@@ -83,7 +83,7 @@
             <Filename Value="..\doublecmd"/>
           </Target>
           <SearchPaths>
-            <IncludeFiles Value="$(LazarusDir)\ide;$(ProjOutDir)"/>
+            <IncludeFiles Value="$(LazarusDir)\ide;$(ProjOutDir);..\sdk"/>
             <Libraries Value="$(ProjPath)\..\libraries\$(TargetCPU)-$(TargetOS)"/>
             <OtherUnitFiles Value="platform;platform\$(SrcOS);..\sdk;newdesign;newdesign\fileproperties;frames"/>
             <UnitOutputDirectory Value="..\units\$(TargetCPU)-$(TargetOS)-$(LCLWidgetType)"/>
@@ -127,7 +127,7 @@
             <Filename Value="..\doublecmd"/>
           </Target>
           <SearchPaths>
-            <IncludeFiles Value="$(LazarusDir)\ide;$(ProjOutDir)"/>
+            <IncludeFiles Value="$(LazarusDir)\ide;$(ProjOutDir);..\sdk"/>
             <Libraries Value="$(ProjPath)\..\libraries\$(TargetCPU)-$(TargetOS)"/>
             <OtherUnitFiles Value="platform;platform\$(SrcOS);..\sdk;newdesign;newdesign\fileproperties;frames"/>
             <UnitOutputDirectory Value="..\units\$(TargetCPU)-$(TargetOS)-$(LCLWidgetType)"/>
@@ -942,7 +942,7 @@
       <Filename Value="..\doublecmd"/>
     </Target>
     <SearchPaths>
-      <IncludeFiles Value="$(LazarusDir)\ide;$(ProjOutDir)"/>
+      <IncludeFiles Value="$(LazarusDir)\ide;$(ProjOutDir);..\sdk"/>
       <Libraries Value="$(ProjPath)\..\libraries\$(TargetCPU)-$(TargetOS)"/>
       <OtherUnitFiles Value="platform;platform\$(SrcOS);..\sdk;newdesign;newdesign\fileproperties;frames"/>
       <UnitOutputDirectory Value="..\units\$(TargetCPU)-$(TargetOS)-$(LCLWidgetType)"/>
