--- a/branches/0.5/plugins/wfx/samba/src/samba.lpi
+++ b/branches/0.5/plugins/wfx/samba/src/samba.lpi
@@ -34,12 +34,20 @@
         <LaunchingApplication PathPlusParams="/usr/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
-    <Units Count="1">
+    <Units Count="2">
       <Unit0>
         <Filename Value="samba.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="samba"/>
       </Unit0>
+      <Unit1>
+        <Filename Value="smbauthdlg.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="DialogBox"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="SmbAuthDlg"/>
+      </Unit1>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -52,8 +60,13 @@
       <OtherUnitFiles Value="../../../../sdk"/>
       <UnitOutputDirectory Value="../lib"/>
     </SearchPaths>
+    <Conditionals Value="if TargetOS = 'darwin' then
+begin
+  LinkerOptions += ' -no_order_inits';
+end;"/>
     <Linking>
       <Options>
+        <PassLinkerOptions Value="True"/>
         <ExecutableType Value="Library"/>
       </Options>
     </Linking>
