UPD: Merge fixes from trunk (4003-4004)
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@4025 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.5/src/doublecmd.lpi
+++ b/branches/0.5/src/doublecmd.lpi
@@ -259,7 +259,7 @@
         <PackageName Value="viewerpackage"/>
       </Item7>
     </RequiredPackages>
-    <Units Count="119">
+    <Units Count="120">
       <Unit0>
         <Filename Value="doublecmd.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -990,6 +990,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="uWinNetExecuteOperation"/>
       </Unit118>
+      <Unit119>
+        <Filename Value="platform\unix\uoverlayscrollbarfix.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="uOverlayScrollBarFix"/>
+      </Unit119>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
