UPD: Merge fixes from trunk (4093)
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@4105 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.5/src/doublecmd.lpi
+++ b/branches/0.5/src/doublecmd.lpi
@@ -259,7 +259,7 @@
         <PackageName Value="viewerpackage"/>
       </Item7>
     </RequiredPackages>
-    <Units Count="120">
+    <Units Count="121">
       <Unit0>
         <Filename Value="doublecmd.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -995,6 +995,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="uOverlayScrollBarFix"/>
       </Unit119>
+      <Unit120>
+        <Filename Value="platform\win\uexceptionhandlerfix.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="uExceptionHandlerFix"/>
+      </Unit120>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
