--- a/branches/0.5/src/doublecmd.lpi
+++ b/branches/0.5/src/doublecmd.lpi
@@ -63,6 +63,9 @@
             </Debugging>
           </Linking>
           <Other>
+            <CompilerMessages>
+              <UseMsgFile Value="True"/>
+            </CompilerMessages>
             <ConfigFile>
               <CustomConfigFile Value="True"/>
               <ConfigFilePath Value="fpc-extra.cfg"/>
@@ -108,6 +111,9 @@
             </Debugging>
           </Linking>
           <Other>
+            <CompilerMessages>
+              <UseMsgFile Value="True"/>
+            </CompilerMessages>
             <ConfigFile>
               <CustomConfigFile Value="True"/>
               <ConfigFilePath Value="fpc-extra.cfg"/>
@@ -210,6 +216,10 @@
             <CompilerMessages>
               <UseMsgFile Value="True"/>
             </CompilerMessages>
+            <ConfigFile>
+              <CustomConfigFile Value="True"/>
+              <ConfigFilePath Value="fpc-extra.cfg"/>
+            </ConfigFile>
             <CustomOptions Value="-dNIGHTLY_BUILD"/>
             <CompilerPath Value="$(CompPath)"/>
             <ExecuteBefore>
@@ -1050,4 +1060,4 @@
       </ExecuteBefore>
     </Other>
   </CompilerOptions>
-</CONFIG>
+</CONFIG>
